Feature/downloader update 4538 (#522)
* Initial functionality works, but needs more unit tests.

* Improved how IClient works.

* Fixed one of the Downloader unit tests and an error message in ParallelUtilities.cs

* Some minor ReSharper fixes.

* Removed the commented out code

--- a/Downloader/Properties/launchSettings.json
+++ b/Downloader/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Downloader": {
       "commandName": "Project",
-      "commandLineArgs": "--ga both --out Output",
+      "commandLineArgs": "--ga GRCh37 --out TempData",
       "workingDirectory": "E:\\Data\\Nirvana"
     }
   }
