--- a/Downloader/Downloader.appsettings.json
+++ b/Downloader/Downloader.appsettings.json
@@ -3,7 +3,7 @@
     "HostName": "d24njugtyo9gfs.cloudfront.net",
     "CacheDirectory": "ab0cf104f39708eabd07b8cb67e149ba-Cache",
     "ReferencesDirectory": "d95867deadfe690e40f42068d6b59df8-References",
-    "ManifestGRCh37": "DRAGEN_3.4_GRCh37.txt",
-    "ManifestGRCh38": "DRAGEN_3.4_GRCh38.txt"
+    "ManifestGRCh37": "Schema22_GRCh37.txt",
+    "ManifestGRCh38": "Schema22_GRCh38.txt"
   }
 }
