--- a/Vcf/Vcf.csproj
+++ b/Vcf/Vcf.csproj
@@ -9,5 +9,6 @@
     <ProjectReference Include="..\OptimizedCore\OptimizedCore.csproj" />
     <ProjectReference Include="..\VariantAnnotation.Interface\VariantAnnotation.Interface.csproj" />
     <ProjectReference Include="..\Variants\Variants.csproj" />
+    <ProjectReference Include="..\MitoHeteroplasmy\MitoHeteroplasmy.csproj" />
   </ItemGroup>
 </Project>
