--- a/MitoHeteroplasmy/MitoHeteroplasmy.csproj
+++ b/MitoHeteroplasmy/MitoHeteroplasmy.csproj
@@ -9,7 +9,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OptimizedCore\OptimizedCore.csproj" />
+    <ProjectReference Include="..\RepeatExpansions\RepeatExpansions.csproj" />
     <ProjectReference Include="..\VariantAnnotation.Interface\VariantAnnotation.Interface.csproj" />
+    <ProjectReference Include="..\RepeatExpansions\RepeatExpansions.csproj" />
+    <ProjectReference Include="..\VariantAnnotation\VariantAnnotation.csproj" />
   </ItemGroup>
 
 </Project>
