--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -195,11 +195,6 @@
         "NirvanaDataUrlBase": "https://ilmn-nirvana.s3-us-west-2.amazonaws.com/"
       }
     },
-    "RR DQ strelka": {
-      "commandName": "Project",
-      "commandLineArgs": "--cache /Users/rroy1/development/Cache\\26\\GRCh38\\Both --sd /Users/rroy1/development/SupplementaryDatabase\\56\\GRCh38 --ref /Users/rroy1/development/References/6/Homo_sapiens.GRCh38.Nirvana.dat --in DQ-Strelka-Germline-chr22-hg38.vcf.gz --out dq",
-      "workingDirectory": "/Users/rroy1/development/TestDatasets"
-    },
     "RR spliceAi-37": {
       "commandName": "Project",
       "commandLineArgs": " --cache /Users/rroy1/development/Cache/26/GRCh37/Ensembl --ref /Users/rroy1/development/References/6/Homo_sapiens.GRCh37.Nirvana.dat --in spliceAi-37.vcf--out spliceAi-37",
@@ -207,7 +202,12 @@
     },
     "RR DQ-38": {
       "commandName": "Project",
-      "commandLineArgs": "--cache /Users/rroy1/development/Cache\\26\\GRCh38\\Both --sd /Users/rroy1/development/SupplementaryDatabase\\56\\GRCh38 --ref /Users/rroy1/development/References/6/Homo_sapiens.GRCh38.Nirvana.dat --in DQ-Strelka-Germline-chr22-hg38.vcf.gz --out dq",
+      "commandLineArgs": "--cache /Users/rroy1/development/Cache/26/GRCh38/Both --sd /Users/rroy1/development/SupplementaryDatabase/58/GRCh38 --ref /Users/rroy1/development/References/7/Homo_sapiens.GRCh38.Nirvana.dat --in DQ-Strelka-Germline-chr22-hg38.vcf.gz --out dq-38",
+      "workingDirectory": "/Users/rroy1/development/TestDatasets"
+    },
+    "RR gHapMix-37": {
+      "commandName": "Project",
+      "commandLineArgs": "--cache /Users/rroy1/development/Cache/26/GRCh37/Both --sd /Users/rroy1/development/SupplementaryDatabase/58/GRCh37 --ref /Users/rroy1/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in gHapMixTrio-Strelka-Pedigree-WG-GRCh37.vcf.gz --out gHap-37",
       "workingDirectory": "/Users/rroy1/development/TestDatasets"
     },
     "SK MitoHeteroplasmy": {
