Feature/cache 27 improvements (#534)
* Removed predicted transcript checking since it's not longer needed.

* Added versions into LambdaUrlHelper. This means that we only have a single source of truth. Might want to consider abandoning data versions in code though.

* Updated the GFF writer to be able to process from the Both cache.

* fixing single annotation lambda for vep 84

* adding base url

* fixing cache prefix

--- a/Cloud/Cloud.csproj
+++ b/Cloud/Cloud.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Genome\Genome.csproj" />
     <ProjectReference Include="..\IO\IO.csproj" />
+    <ProjectReference Include="..\ReferenceSequence\ReferenceSequence.csproj" />
   </ItemGroup>
   <Import Project="..\CommonAssemblyInfo.props" />
 </Project>
