--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -7,37 +7,47 @@
     },
     "RR_omim": {
       "commandName": "Project",
-      "commandLineArgs": " omim --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --out ~/Development/SupplementaryDatabase/59/temp --gm2 genemap2.txt --m2g mim2gene.txt --uga c:\\Development\\Cache\\26\\UGA.tsv.gz",
+      "commandLineArgs": " omim --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --out ~/development/SupplementaryDatabase/59/temp --gm2 genemap2.txt --m2g mim2gene.txt --uga c:\\Development\\Cache\\26\\UGA.tsv.gz",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\OMIM\\2019-02-25"
     },
     "RR_gnomad": {
       "commandName": "Project",
-      "commandLineArgs": " Gnomad --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --out ~/Development/SupplementaryDatabase/59/test --genome genome\\ --exome exome\\ --temp ~/Development/SupplementaryDatabase/59/merge",
+      "commandLineArgs": " Gnomad --ref ~/development/References/7/Homo_sapiens.GRCh38.Nirvana.dat --out ~/development/SupplementaryDatabase/59/test --genome genome\\ --exome exome\\ --temp ~/development/SupplementaryDatabase/59/merge",
       "workingDirectory": "C:\\development\\ExternalDataSources\\gnomAD\\2.1\\GRCh38\\"
+    },
+    "RR_lcr_38": {
+      "commandName": "Project",
+      "commandLineArgs": " gnomad-lcr --ref /Users/rroy1/development/References/7/Homo_sapiens.GRCh38.Nirvana.dat --in LCRFromHengHg38.txt.gz --out /Users/rroy1/development/SupplementaryDatabase/58/GRCh38",
+      "workingDirectory": "/Users/rroy1/development/ExternalDataSources/gnomAD/2.1/LCR/"
+    },
+    "RR_lcr_37": {
+      "commandName": "Project",
+      "commandLineArgs": " gnomad-lcr --ref /Users/rroy1/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in LCR.GRCh37_compliant.interval_list.gz --out /Users/rroy1/development/SupplementaryDatabase/58/GRCh37",
+      "workingDirectory": "/Users/rroy1/development/ExternalDataSources/gnomAD/2.1/LCR/"
     },
     "RR_clingen": {
       "commandName": "Project",
-      "commandLineArgs": " makeClinGenDb --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --out ~/Development/SupplementaryDatabase/59/test --in ClinGen_GRCh37_unified_sorted.tsv.gz",
+      "commandLineArgs": " makeClinGenDb --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --out ~/development/SupplementaryDatabase/59/test --in ClinGen_GRCh37_unified_sorted.tsv.gz",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\ClinGen\\2016-04-14_UCSC\\GRCh37"
     },
     "RR_clinvar": {
       "commandName": "Project",
-      "commandLineArgs": " Clinvar --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --rcv ClinVarFullRelease_2020-01.xml.gz --vcv ClinVarVariationRelease_2020-01.xml.gz --out ~/Development/SupplementaryDatabase/59/test",
+      "commandLineArgs": " Clinvar --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --rcv ClinVarFullRelease_2020-01.xml.gz --vcv ClinVarVariationRelease_2020-01.xml.gz --out ~/development/SupplementaryDatabase/59/test",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\ClinVar\\20200130"
     },
     "RR_cosmic": {
       "commandName": "Project",
-      "commandLineArgs": " Cosmic --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in AllCosmicMutations.vcf.gz --tsv AllMutationStudies.tsv.gz --out ~/Development/SupplementaryDatabase/59/temp",
+      "commandLineArgs": " Cosmic --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in AllCosmicMutations.vcf.gz --tsv AllMutationStudies.tsv.gz --out ~/development/SupplementaryDatabase/59/temp",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\COSMIC\\v84\\GRCh37\\mergedFiles"
     },
     "RR_refMinor": {
       "commandName": "Project",
-      "commandLineArgs": "refMinor --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --out ~/Development/SupplementaryDatabase/59/test --in refMinorBug.vcf",
+      "commandLineArgs": "refMinor --ref ~/development/References/7/Homo_sapiens.GRCh38.Nirvana.dat --out ~/development/SupplementaryDatabase/59/test --in refMinorBug.vcf",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\1000Gen\\GRCh38"
     },
     "RR_phylop": {
       "commandName": "Project",
-      "commandLineArgs": "PhyloP --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --out ~/Development/SupplementaryDatabase/59/test --in chr10.phyloP46way.wigFix.gz",
+      "commandLineArgs": "PhyloP --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --out ~/development/SupplementaryDatabase/59/test --in chr10.phyloP46way.wigFix.gz",
       "workingDirectory": "c:\\development\\ExternalDataSources\\phyloP\\GRCh37"
     },
     "RR_custom": {
@@ -47,17 +57,17 @@
     },
     "RR_globalAllele": {
       "commandName": "Project",
-      "commandLineArgs": " globalMinor --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in All_20170403.vcf.gz --out ~/Development/SupplementaryDatabase/59/temp",
+      "commandLineArgs": " globalMinor --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in All_20170403.vcf.gz --out ~/development/SupplementaryDatabase/59/temp",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\dbSNP\\150\\GRCh37"
     },
     "RR_dgv": {
       "commandName": "Project",
-      "commandLineArgs": " Dgv --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --out ~/Development/SupplementaryDatabase/59/test --in GRCh37_hg19_variants_2016-05-15_sorted.txt.gz",
+      "commandLineArgs": " Dgv --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --out ~/development/SupplementaryDatabase/59/test --in GRCh37_hg19_variants_2016-05-15_sorted.txt.gz",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\DGV\\2016-05-15\\GRCh37"
     },
     "RR_onekg": {
       "commandName": "Project",
-      "commandLineArgs": " OneKgen --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --out ~/Development/SupplementaryDatabase/59/test\\GRCh38 --in ALL_1000Genome_GRCh38_snvRes_5_23_2016_remove_conflicting_entries.removeExtraField.vcf.gz",
+      "commandLineArgs": " OneKgen --ref ~/development/References/7/Homo_sapiens.GRCh38.Nirvana.dat --out ~/development/SupplementaryDatabase/59/test\\GRCh38 --in ALL_1000Genome_GRCh38_snvRes_5_23_2016_remove_conflicting_entries.removeExtraField.vcf.gz",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\1000Gen\\GRCh38"
     },
     "SK_JsonSchema": {
@@ -72,12 +82,12 @@
     },
     "RR_build_topmed": {
       "commandName": "Project",
-      "commandLineArgs": "Topmed --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in Topmed_grch37.vcf.gz --out ~/Development/SupplementaryDatabase/59/temp",
+      "commandLineArgs": "Topmed --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in Topmed_grch37.vcf.gz --out ~/development/SupplementaryDatabase/59/temp",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\TopMed"
     },
     "RR_onekgSV": {
       "commandName": "Project",
-      "commandLineArgs": " OneKGenSv --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --out ~/Development/SupplementaryDatabase/59/48\\GRCh37 --in allChrPhase3v5a_conflictRemoved.vcf.gz",
+      "commandLineArgs": " OneKGenSv --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --out ~/development/SupplementaryDatabase/59/48\\GRCh37 --in allChrPhase3v5a_conflictRemoved.vcf.gz",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\1000Gen\\GRCh37"
     },
     "SK_MitoMap": {
@@ -96,12 +106,12 @@
     },
     "RR_gnomadGenes": {
       "commandName": "Project",
-      "commandLineArgs": "GnomadGeneScores --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --cache C:\\development\\Cache\\26\\GRCh37\\Both --in gnomad.v2.1.1.lof_metrics.by_gene.txt --out ~/Development/SupplementaryDatabase/59/test",
+      "commandLineArgs": "GnomadGeneScores --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --cache C:\\development\\Cache\\26\\GRCh37\\Both --in gnomad.v2.1.1.lof_metrics.by_gene.txt --out ~/development/SupplementaryDatabase/59/test",
       "workingDirectory": "C:\\development\\ExternalDataSources\\gnomAD\\2.1\\LoF_metrics"
     },
     "RR_spliceAi_37": {
       "commandName": "Project",
-      "commandLineArgs": "SpliceAi --ref  ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh37\\Both --gene ..\\genesymbol_to_ensemblid.tsv --in mini.merged.vcf.gz --out ~/Development/SupplementaryDatabase/59/test",
+      "commandLineArgs": "SpliceAi --ref  ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh37\\Both --gene ..\\genesymbol_to_ensemblid.tsv --in mini.merged.vcf.gz --out ~/development/SupplementaryDatabase/59/test",
       "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\1.3\\GRCh37"
     },
     "SK_spliceAI": {
@@ -116,42 +126,42 @@
     },
     "RR_primateAi": {
       "commandName": "Project",
-      "commandLineArgs": "PrimateAi --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --cache C:\\development\\Cache\\26\\GRCh37\\Both --in PrimateAI_Percentiles_0.2_GRCh37.tsv.gz --out ~/Development/SupplementaryDatabase/59/test",
+      "commandLineArgs": "PrimateAi --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --cache C:\\development\\Cache\\26\\GRCh37\\Both --in PrimateAI_Percentiles_0.2_GRCh37.tsv.gz --out ~/development/SupplementaryDatabase/59/test",
       "workingDirectory": "C:\\development\\ExternalDataSources\\PrimateAI\\0.2\\GRCh37"
     },
     "RR_heteroplasmy": {
       "commandName": "Project",
-      "commandLineArgs": "MitoHet --ref ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in coriell_GRCh37.MT.json.bed.gz --out ~/Development/SupplementaryDatabase/59/test",
+      "commandLineArgs": "MitoHet --ref ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in coriell_GRCh37.MT.json.bed.gz --out ~/development/SupplementaryDatabase/59/test",
       "workingDirectory": "c:\\development\\ExternalDataSources\\MitoHeteroplasmy"
     },
     "RR_merge": {
       "commandName": "Project",
-      "commandLineArgs": " merge --dir ~/Development/SupplementaryDatabase/59/merge --out ~/Development/SupplementaryDatabase/59/test\\gnomad ",
+      "commandLineArgs": " merge --dir ~/development/SupplementaryDatabase/59/merge --out ~/development/SupplementaryDatabase/59/test\\gnomad ",
       "workingDirectory": "C:\\development\\ExternalDataSources\\gnomAD\\2.1\\GRCh38"
     },
     "RR sa index": {
       "commandName": "Project",
-      "commandLineArgs": " index --ind ~/Development/SupplementaryDatabase/59/56\\GRCh38\\SpliceAiIndel_20191004.nsa.idx --ver C:\\development\\ExternalDataSources\\SpliceAI\\1.3\\GRCh38\\spliceai_scores.masked.hg38.vcf.gz.version --out ~/Development/SupplementaryDatabase/59/56\\GRCh38\\SpliceAi_1.3.nsa.idx",
+      "commandLineArgs": " index --ind ~/development/SupplementaryDatabase/59/56\\GRCh38\\SpliceAiIndel_20191004.nsa.idx --ver C:\\development\\ExternalDataSources\\SpliceAI\\1.3\\GRCh38\\spliceai_scores.masked.hg38.vcf.gz.version --out ~/development/SupplementaryDatabase/59/56\\GRCh38\\SpliceAi_1.3.nsa.idx",
       "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\"
     },
     "RR nsa_concat": {
       "commandName": "Project",
-      "commandLineArgs": " concat --dir ~/Development/SupplementaryDatabase/59/merge --out ~/Development/SupplementaryDatabase/59/test\\gnomad ",
+      "commandLineArgs": " concat --dir ~/development/SupplementaryDatabase/59/merge --out ~/development/SupplementaryDatabase/59/test\\gnomad ",
       "workingDirectory": "C:\\development\\ExternalDataSources\\gnomAD\\2.1\\GRCh38"
     },
     "RR_spliceAi-38": {
       "commandName": "Project",
-      "commandLineArgs": "SpliceAi --ref  c:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh38\\Both --gene ..\\genesymbol_to_ensemblid.tsv --in miniSpliceAi.vcf --out ~/Development/SupplementaryDatabase/59/test",
+      "commandLineArgs": "SpliceAi --ref  ~/development/References/7/Homo_sapiens.GRCh38.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh38\\Both --gene ..\\genesymbol_to_ensemblid.tsv --in miniSpliceAi.vcf --out ~/development/SupplementaryDatabase/59/test",
       "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\1.3\\GRCh38"
     },
     "RR_aaCon-38": {
       "commandName": "Project",
-      "commandLineArgs": "AaCon --ref  c:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh38\\Both --scr conservationScores.tsv.gz --out ~/Development/SupplementaryDatabase/59/test",
+      "commandLineArgs": "AaCon --ref  ~/development/References/7/Homo_sapiens.GRCh38.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh38\\Both --scr conservationScores.tsv.gz --out ~/development/SupplementaryDatabase/59/test",
       "workingDirectory": "C:\\development\\ExternalDataSources\\MultiZ100Way\\GRCh38"
     },
     "RR_aaCon-37": {
       "commandName": "Project",
-      "commandLineArgs": "AaCon --ref  ~/Development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh37\\Both --scr conservationScores.tsv.gz --out ~/Development/SupplementaryDatabase/59/test",
+      "commandLineArgs": "AaCon --ref  ~/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh37\\Both --scr conservationScores.tsv.gz --out ~/development/SupplementaryDatabase/59/test",
       "workingDirectory": "C:\\development\\ExternalDataSources\\MultiZ46Way\\GRCh37"
     },
     "MitoHeteroplasmy_SK": {
