adding section output capabilities to jasix (#547)
* adding section output capabilities to jasix

* adding unit tests for sections

* using expression statements

--- a/Jasix/Properties/launchSettings.json
+++ b/Jasix/Properties/launchSettings.json
@@ -2,8 +2,8 @@
   "profiles": {
     "Jasix": {
       "commandName": "Project",
-      "commandLineArgs": " --in trioChr1.json.gz -q chr1:10000-10010",
-      "workingDirectory": "C:\\Development\\TestDatasets"
+      "commandLineArgs": " --in clinvar.json.gz -s genes",
+      "workingDirectory": "/Users/rroy1/development/TestDatasets"
     }
   }
 }
