--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -169,6 +169,11 @@
       "commandLineArgs": " --cache /Users/rroy1/development/Cache/27/GRCh38/Both --ref /Users/rroy1/development/References/7/Homo_sapiens.GRCh38.Nirvana.dat --in Dragen_v3.2-Dragen-Pedigree-RnaEdits-hg38-RefSeq-VEP91.vcf.gz --out rnaEdit",
       "workingDirectory": "/Users/rroy1/development/TestDatasets"
     },
+    "RR_chrM": {
+      "commandName": "Project",
+      "commandLineArgs": " --cache /Users/rroy1/development/Cache/27/GRCh37/Both --ref /Users/rroy1/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in inputs/chrMT.vcf --out outputs/chrMT",
+      "workingDirectory": "/Users/rroy1/development/TestDatasets"
+    },
     "RR_gnomad-missing": {
       "commandName": "Project",
       "commandLineArgs": " --cache /Users/rroy1/development/Cache/27/GRCh38/Both --ref /Users/rroy1/development/References/7/Homo_sapiens.GRCh38.Nirvana.dat --sd /Users/rroy1/development/SupplementaryDatabase/59/GRCh38 --in inputs/chr12.vcf.gz --out outputs/gnomad-missing",
