using sb pool and writing sb (#607)
* using sb pool and writing sb

* using sb in annotated variants too

* reusing buffer in text writer

* using sb pool

* pool for annotated positions

* pool of annotated variants

* clearing more fields

* using variant pool

* checking variant type

* removing GetJsonString and constructors

* removing annotated position constructor

* updating all tests

* removing string builder cache

* updating the string builder pool

* remove debugging code

* pool for annotated transcripts

* using annotated transcript pools throughout

* using 16K pool size for annotated transcript

* utilities for basic stats

* anno transcript pool size 16

* cleaning code

* resharper fixes, reduce pool retention

* removing redundent null check

--- a/OptimizedCore/OptimizedCore.csproj
+++ b/OptimizedCore/OptimizedCore.csproj
@@ -5,5 +5,8 @@
     <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="6.0.0-preview.6.21355.2" />
+  </ItemGroup>
   <Import Project="..\CommonAssemblyInfo.props" />
 </Project>
