--- a/AnnotationLambda/AnnotationLambda.csproj
+++ b/AnnotationLambda/AnnotationLambda.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <AWSProjectType>Lambda</AWSProjectType>
     <OutputPath>bin\$(Configuration)</OutputPath>
-    <LangVersion>latest</LangVersion>
+
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Amazon.Lambda.Core" Version="2.0.0" />
+    <PackageReference Include="Amazon.Lambda.Core" Version="2.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="2.0.0" />
-    <PackageReference Include="AWSSDK.Lambda" Version="3.7.0.15" />
-    <PackageReference Include="AWSSDK.S3" Version="3.7.0.17" />
-    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.1.1" />
+    <PackageReference Include="AWSSDK.Lambda" Version="3.7.9.3" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.8.3" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.3.31" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Cloud\Cloud.csproj" />
