--- a/Cloud/Cloud.csproj
+++ b/Cloud/Cloud.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <OutputPath>..\bin\$(Configuration)</OutputPath>
-    <LangVersion>latest</LangVersion>
+    
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Amazon.Lambda.Core" Version="2.0.0" />
+    <PackageReference Include="Amazon.Lambda.Core" Version="2.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="2.0.0" />
-    <PackageReference Include="AWSSDK.S3" Version="3.7.0.17" />
-    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.1.1" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.8.3" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.3.31" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
   <ItemGroup>
