--- a/GeneAnnotationLambda/GeneAnnotationLambda.csproj
+++ b/GeneAnnotationLambda/GeneAnnotationLambda.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <AWSProjectType>Lambda</AWSProjectType>
     <OutputPath>bin\$(Configuration)</OutputPath>
-    <LangVersion>latest</LangVersion>
+    
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="2.0.0" />
-    <PackageReference Include="AWSSDK.Core" Version="3.7.0.16" />
-    <PackageReference Include="AWSSDK.Lambda" Version="3.7.0.15" />
+    <PackageReference Include="AWSSDK.Core" Version="3.7.8.5" />
+    <PackageReference Include="AWSSDK.Lambda" Version="3.7.9.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Cloud\Cloud.csproj" />
