--- a/MitoHeteroplasmy/MitoHeteroplasmy.csproj
+++ b/MitoHeteroplasmy/MitoHeteroplasmy.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <TargetFramework>net6.0</TargetFramework>
+    
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\MitoHeteroplasmy.tsv.gz" />
