--- a/OptimizedCore/OptimizedCore.csproj
+++ b/OptimizedCore/OptimizedCore.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <OutputPath>..\bin\$(Configuration)</OutputPath>
-    <LangVersion>latest</LangVersion>
+    
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="6.0.0-preview.6.21355.2" />
+    <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="6.0.2" />
   </ItemGroup>
   <Import Project="..\CommonAssemblyInfo.props" />
 </Project>
