--- a/RepeatExpansions/RepeatExpansions.csproj
+++ b/RepeatExpansions/RepeatExpansions.csproj
@@ -1,14 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <OutputPath>..\bin\$(Configuration)</OutputPath>
-    <LangVersion>latest</LangVersion>
+
   </PropertyGroup>
   <Import Project="..\CommonAssemblyInfo.props" />
-  <ItemGroup>
-    <None Remove="RepeatExpansions.GRCh37.tsv" />
-    <None Remove="RepeatExpansions.GRCh38.tsv" />
-  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\RepeatExpansions.GRCh37.tsv" />
     <EmbeddedResource Include="Resources\RepeatExpansions.GRCh38.tsv" />
