--- a/Vcf/Vcf.csproj
+++ b/Vcf/Vcf.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <OutputPath>..\bin\$(Configuration)</OutputPath>
-    <LangVersion>latest</LangVersion>
+    
   </PropertyGroup>
   <Import Project="..\CommonAssemblyInfo.props" />
   <ItemGroup>
@@ -10,11 +10,5 @@
     <ProjectReference Include="..\VariantAnnotation.Interface\VariantAnnotation.Interface.csproj" />
     <ProjectReference Include="..\Variants\Variants.csproj" />
     <ProjectReference Include="..\MitoHeteroplasmy\MitoHeteroplasmy.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="IsExternalInit" Version="1.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
 </Project>
