--- a/CommonAssemblyInfo.props
+++ b/CommonAssemblyInfo.props
@@ -1,10 +1,10 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Company>Illumina</Company>
-    <Copyright>© 2021 Illumina, Inc.</Copyright>
-    <FileVersion>3.17.0</FileVersion>
-    <AssemblyVersion>3.17.0</AssemblyVersion>
-    <Version>3.17.0</Version>
-    <Authors>Stromberg, Roy, Lajugie, Jiang, Li, and Kang</Authors>
+    <Copyright>© 2022 Illumina, Inc.</Copyright>
+    <FileVersion>3.18.0</FileVersion>
+    <AssemblyVersion>3.18.0</AssemblyVersion>
+    <Version>3.18.0</Version>
+    <Authors>Stromberg, Roy, Platzer, Siddiqui, Ouyang, et al</Authors>
   </PropertyGroup>
 </Project>
