Feature/downloader manifest 1014 (#655)
* adding appsettings to could

* using config file for clouds

* using the s3 bucket as default for lambdas

* using default s3 base url from config file

* using Cloud in Downloader

* fixing downloader manifest path

* adding index for gsa files

* adding check for index file

* fixing texts

* ensuring consistency

--- a/Cloud/Cloud.csproj
+++ b/Cloud/Cloud.csproj
@@ -9,12 +9,19 @@
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="2.0.0" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.8.3" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.3.31" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Genome\Genome.csproj" />
     <ProjectReference Include="..\IO\IO.csproj" />
     <ProjectReference Include="..\ReferenceSequence\ReferenceSequence.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Cloud.appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="..\CommonAssemblyInfo.props" />
 </Project>
