--- a/Downloader/Downloader.appsettings.json
+++ b/Downloader/Downloader.appsettings.json
@@ -1,9 +1,7 @@
 {
   "DataSource": {
     "HostName": "annotations.nirvana.illumina.com",
-    "CacheDirectory": "ab0cf104f39708eabd07b8cb67e149ba-Cache",
-    "ReferencesDirectory": "d95867deadfe690e40f42068d6b59df8-References",
-    "ManifestGRCh37": "latest_SA_GRCh37.txt",
-    "ManifestGRCh38": "latest_SA_GRCh38.txt"
+    "ManifestGRCh37": "latest",
+    "ManifestGRCh38": "latest"
   }
 }
